apps/workloads/tools/it-tools/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
spec:
  selector:
    matchLabels:
      app: it-tools
  template:
    metadata:
      labels:
        app: it-tools
        networking/expose-web-ui: "true"
    spec:
      containers:
        - name: it-tools
          image: ghcr.io/corentinth/it-tools
          ports:
            - name: web-ui
              containerPort: 80
          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "50m"
              memory: "64Mi"
