apps/workloads/tools/it-tools/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: it-tools-route
spec:
  parentRefs:
    - name: internal-gateway
      namespace: traefik
  hostnames:
    - "tools.kerrlab.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: http-cache
      backendRefs:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: networking
          port: 8080
