apps/workloads/tools/it-tools/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: it-tools-policy
spec:
  endpointSelector:
    matchLabels:
      app: it-tools
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: networking
            app.kubernetes.io/component: interceptor
      toPorts:
        - ports:
            - port: "80"
              protocol: "TCP"
